kopyalama butonu ve seslendirme butonu eklendi

--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
         <div class="box">
             <ul class="controls">
                 <li class="left">
+                    <div class="icons">
+                        <i class="fas fa-volume-up" id="from"></i>
+                        <i class="fas fa-copy" id="from"></i>
+                    </div>
                     <select  id="from-lang"></select>
                 </li>
-                <li class="middle">
+                <li class="exchange">
                     <i class="fas fa-exchange-alt"></i>
                 </li>
                 <li class="right">
                     <select  id="to-lang"></select>
+                    <div class="icons">
+                        <i  id="to" class="fas fa-volume-up"></i>
+                        <i  id="to" class="fas fa-copy"></i>
+                    </div>
                 </li>
             </ul>
             <div class="text-controls">
